Fix icon and text alignment error

--- a/core/templates/pages/library-page/search-bar/search-bar.component.css
+++ b/core/templates/pages/library-page/search-bar/search-bar.component.css
@@ -41,7 +41,7 @@
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   color: #fff;
-  padding: 6px 15px 0 15px;
+  padding: 3px 15px 3px 15px;
 }
 
 .oppia-search-button:hover {
@@ -116,7 +116,15 @@
   width: 20em;
 }
 
+.btn-text {
+  color: #257d76;
+  margin-left: 8px;
+}
+
 @media (max-width: 1125px) {
+  .btn-text {
+    color: #257d76;
+  }
   .oppia-search-bar-input {
     color: #257d76;
   }
@@ -148,6 +156,9 @@
 }
 
 @media (max-width: 767px) {
+  .btn-text {
+    color: #fff;
+  }
   .oppia-search-bar-input {
     color: #257d76;
     padding-top: 17px;
@@ -160,7 +171,7 @@
   .oppia-search-button {
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 4px 8px 0 9px;
+    padding: 8px 11px 9px 9px;
   }
   .oppia-input-group.classroom-page-input-group {
     width: 17em;
@@ -266,6 +277,7 @@
   }
   .search-button-icon {
     font-size: 36px;
+    margin: auto;
   }
 }
 
